# ai-learning-system

./: .env.example  .gitattributes  .gitignore  .prettierignore  README.md  REQUIREMENT.md  STATUS.md  api.md  docker-compose.yml  github-collaboration-guide.md  pytest.ini  work-person-b-01-overview.md  work-person-b-07-dev-steps.md  work-person-b-08-appendix.md  work-person-b.md  work-person-c.md
agents/evaluator/: .gitignore  Dockerfile  push.sh  pyproject.toml  requirements.txt  work-person-b-04-evaluator-agent.md
agents/evaluator/.claude/agents/: readonly-code-reviewer.md  test-auditor.md
agents/evaluator/src/: __init__.py  config.py  main.py
agents/evaluator/src/db/: __init__.py  repository.py
agents/evaluator/src/models/: __init__.py  dto.py  evaluation.py
agents/evaluator/src/prompts/: analyze.txt  grade.txt
agents/evaluator/src/services/: __init__.py  behavior_analyzer.py  evaluator.py  llm_service.py  profile_service_client.py  quiz_grader.py  weakness_finder.py
agents/profile/: .env.example  Dockerfile  push.sh  pyproject.toml  requirements.txt  work-person-b-02-profile-agent.md
agents/profile/.claude/agents/: code-review-expert.md  test-auditor.md
agents/profile/src/: __init__.py  config.py  main.py
agents/profile/src/db/: memory.py  repository.py
agents/profile/tests/: conftest.py  test_profile_builder.py  test_schema.py
common/: .gitignore  MANIFEST.in  README.md  package-lock.json  package.json  push.sh  pyproject.toml  work-person-b-06-core-dto.md
common/python/: pyproject.toml
common/python/ai_edu_common/: __init__.py  enums.py  ids.py  json_utils.py  models.py  response.py
common/python/tests/: test_common_py.py
common/src/: index.ts
common/src/dto/: ApiResponse.ts  EvaluationDTO.ts  PageInfo.ts  PathDTO.ts  ProfileDTO.ts  ResourceDTO.ts  SessionDTO.ts  TaskDTO.ts
common/src/enums/: ErrorCodeEnum.ts  IntentEnum.ts  PathNodeStatusEnum.ts  ResourceTypeEnum.ts  TaskStatusEnum.ts
common/src/utils/: IdGenerator.ts  JsonUtils.ts
common/test/: common.test.js
(+140 files in other folders)
