[project]
name = "ai-learning-common"
version = "0.1.0"
description = "共享数据模型与DTO - AI Learning System"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.9.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["common*"]
