[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-edu-common"
version = "1.0.0"
description = "个性化学习多智能体系统 — Python 版共享库（与 TS 版 @ai-edu/common 契约一致）"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5,<3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_edu_common*"]
